Make rest of wizard stuff work

--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -142,7 +142,7 @@ h3 Questionnaire
 
       .form-row.rating
         = label_tag :rating
-        = number_field_tag :rating, "", id: 'modal-rating'
+        = select_tag :rating, "", id: 'modal-rating'
 
       .form-row#modal-description
 
