--- a/app/views/characters/wizard_basics.slim
+++ b/app/views/characters/wizard_basics.slim
@@ -2,22 +2,47 @@
 
   h2 Character Creation Wizard: #{@character.name}
 
+  = render partial: 'wizard_toc'
+
   h3 Basics
 
   .form-row
     = f.label :pronouns
-    = f.text_field :pronouns, @character.pronouns
+    = f.text_field :pronouns
 
   .form-row
     = f.label :true_self_id, "True Self"
     = collection_select(:character, :true_self_id, TrueSelf.all, :id, :name, {})
 
+  h3 Attributes
+
+  .flex-container
+    - @attributes.each do |cat,vals|
+      .column
+        strong
+          = cat
+        - vals.each do |val|
+          .row
+            label
+              = val
+            .dots
+              - (1..5).each do |i|
+                - if @character.send(val.parameterize("_").to_sym) >= i
+                  span.dot.selected
+                    = f.radio_button val.parameterize("_").to_sym, i, label: false, checked: @character.send(val.parameterize("_").to_sym).eql?(i) ? 'checked' : ''
+                - else
+                  span.dot
+                    = f.radio_button val.parameterize("_").to_sym, i, label: false
+
   = hidden_field_tag "wizard_current", "basics"
   = hidden_field_tag "wizard", "skills_trainings"
+  = f.hidden_field :use_extended
 
   = hidden_field_tag "formaction", "", id: 'form-action'
   = f.submit "Save", id: 'save'
-  = f.submit "Save and Continue", id: 'save-continue'
+  = f.submit "Save and Next Page", id: 'save-continue'
   = f.submit "Save & Skip to Full Sheet", id: 'save-skip'
+  = f.submit "Switch to Non-Mechanical Build", id: 'switch-non-mechanics'
 
 = javascript_include_tag 'wizard', 'data-turbolinks-track' => true
+= javascript_include_tag 'characters', 'data-turbolinks-track' => true
