--- a/app/views/characters/wizard.slim
+++ b/app/views/characters/wizard.slim
@@ -7,6 +7,15 @@
     = f.label :name
     = f.text_field :name
 
+  .form-row
+    label.radio-label
+      = f.radio_button :use_extended, false
+      | I would like to build my character's mechanics myself
+    label.radio-label
+      = f.radio_button :use_extended, true
+      | I would like storyteller assistance in building my character, and am willing to answer a few extra questions about it.
+
+
   - if @section.present?
 
     h3
