--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -23,6 +23,15 @@ textarea {
   }
 }
 
+select {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px $black solid;
+  background-color: $white;
+  font-size: 16px;
+  height: 44px;
+}
+
 .template {
   display: none;
 }
