--- a/app/assets/stylesheets/pages/_character.scss
+++ b/app/assets/stylesheets/pages/_character.scss
@@ -32,3 +32,28 @@
     }
   }
 }
+
+.flex-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin: 0 -20px;
+
+  .column {
+    flex-grow: 1;
+    flex-shrink: 1;
+    padding: 0 20px;
+
+    strong {
+      text-align: center;
+      display: block;
+      font-weight: bold;
+    }
+
+    .row {
+      display: flex;
+      justify-content: space-between;
+      padding: 5px 0;
+    }
+  }
+}
