show numbers only for mobile; fix issue w/ saving characters w/ challenges or advantages

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -32,6 +32,19 @@ select {
   height: 44px;
 }
 
+.form-row {
+  margin: 20px 0;
+
+  button + button {
+    margin-left: 10px;
+  }
+}
+
+label + select,
+label + input {
+  margin-left: 10px;
+}
+
 .template {
   display: none;
 }
