--- a/app/assets/stylesheets/pages/_character.scss
+++ b/app/assets/stylesheets/pages/_character.scss
@@ -54,6 +54,23 @@
       display: flex;
       justify-content: space-between;
       padding: 5px 0;
+
+      .numeric {
+        display: none;
+      }
+    }
+  }
+
+  @media only screen and (max-width: $small-media-query-size) {
+    .column {
+      .row {
+        .numeric {
+          display: block;
+        }
+        .dots {
+          display: none;
+        }
+      }
     }
   }
 }
