fix header dropdowns

--- a/app/assets/stylesheets/pages/_character.scss
+++ b/app/assets/stylesheets/pages/_character.scss
@@ -74,3 +74,17 @@
     }
   }
 }
+
+.questionnaire {
+  h4 {
+    cursor: pointer;
+
+    &.open {
+
+    }
+  }
+
+  .section-content {
+    display: none;
+  }
+}
