--- a/app/assets/stylesheets/utilities/_colors.scss
+++ b/app/assets/stylesheets/utilities/_colors.scss
@@ -2,6 +2,8 @@ $green: #5C7A6A;
 $silver: #A6ADA7;
 $white: #FFFFFF;
 $black: #333333;
+$dirty-polaroid: #f0efe8;
+$ash-grey: #aebfaf;
 
 $primary-color: $green;
 $hamburger-layer-color: $white;
