--- a/app/views/characters/wizard_skills_trainings.slim
+++ b/app/views/characters/wizard_skills_trainings.slim
@@ -28,6 +28,7 @@
   = hidden_field_tag "wizard", "challenges_advantages"
 
   = hidden_field_tag "formaction", "", id: 'form-action'
+  = f.submit "Back", id: 'back'
   = f.submit "Save", id: 'save'
   = f.submit "Save and Next Page", id: 'save-continue'
   = f.submit "Save & Skip to Full Sheet", id: 'save-skip'
