--- a/app/assets/stylesheets/utilities/_typography.scss
+++ b/app/assets/stylesheets/utilities/_typography.scss
@@ -34,6 +34,14 @@ a {
   text-decoration: underline;
 }
 
+strong {
+  font-weight: bold;
+}
+
+em {
+  font-style: italic;
+}
+
 @mixin text-glow {
   text-shadow: 1px 1px 3px #a6ada7;
 }
