--- a/app/views/characters/wizard_challenges_advantages.slim
+++ b/app/views/characters/wizard_challenges_advantages.slim
@@ -48,6 +48,7 @@
   = hidden_field_tag "wizard", "full"
 
   = hidden_field_tag "formaction", "", id: 'form-action'
+  = f.submit "Back", id: 'back'
   = f.submit "Finish", id: 'finish'
 
 .overlay#advantages-overlay
