--- a/app/views/characters/wizard_basics.slim
+++ b/app/views/characters/wizard_basics.slim
@@ -35,10 +35,12 @@
                     = f.radio_button val.parameterize("_").to_sym, i, label: false
 
   = hidden_field_tag "wizard_current", "basics"
+  = hidden_field_tag "wizard_prev", @questionnaire.last.id
   = hidden_field_tag "wizard", "skills_trainings"
   = f.hidden_field :use_extended
 
   = hidden_field_tag "formaction", "", id: 'form-action'
+  = f.submit "Back", id: 'back'
   = f.submit "Save", id: 'save'
   = f.submit "Save and Next Page", id: 'save-continue'
   = f.submit "Save & Skip to Full Sheet", id: 'save-skip'
