--- a/app/views/characters/wizard_challenges_advantages.slim
+++ b/app/views/characters/wizard_challenges_advantages.slim
@@ -45,6 +45,7 @@
         = hidden_field_tag "character[character_has_challenges][][challenge_id]", challenge.challenge.id
 
   = hidden_field_tag "wizard_current", "challenges_advantages"
+  = hidden_field_tag "wizard_prev", "skills_trainings"
   = hidden_field_tag "wizard", "full"
 
   = hidden_field_tag "formaction", "", id: 'form-action'
