Add accordion code to show page

--- a/app/views/characters/show.slim
+++ b/app/views/characters/show.slim
@@ -117,3 +117,5 @@ h3 Questionnaire
             .question-answer
               - if @character.questionnaire_answers.where(questionnaire_item_id: qi.id).present?
                 = @character.questionnaire_answers.where(questionnaire_item_id: qi.id).first.answer.html_safe
+
+= javascript_include_tag 'characters', 'data-turbolinks-track' => true
