--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -1,6 +1,10 @@
 .form-row
   = f.label :name
   = f.text_field :name
+- if current_user.is_storyteller
+  .form-row
+    = f.label :status
+    = f.select :status, options_for_select(@statuses)
 .form-row
   = f.label :pronouns, "Character Pronouns"
   = f.text_field :pronouns
@@ -132,7 +136,11 @@ h3 Questionnaire
                 = hidden_field_tag "character[questionnaire_answers][][id]"
               = hidden_field_tag "character[questionnaire_answers][][questionnaire_item_id]", question.id
 
+= hidden_field_tag "submit", false
+
 = f.submit "Save"
+- if @character.status == 0
+  = f.submit "Save and Submit", id: 'save-submit'
 
 .overlay#advantages-overlay
   .modal
