General wrapper styling for layout. Style devise pages.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
 </head>
 <body>
   <%= render partial: 'layouts/header' %>
-
-  <%= yield %>
-
+  <div class="main">
+    <%= yield %>
+  </div>
   <%= javascript_include_tag 'footer', 'data-turbolinks-track' => true %>
 </body>
 </html>
