--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -1,3 +1,17 @@
+html {
+  min-height: 100%;
+  position: relative;
+}
+
 body {
+  min-height: 100vh;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+
+  > .main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
 }
