--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -4,7 +4,7 @@
 - if current_user.is_storyteller
   .form-row
     = f.label :status
-    = f.select :status, options_for_select(@statuses)
+    = f.select :status, options_for_select(@statuses, @character.status)
 .form-row
   = f.label :pronouns, "Character Pronouns"
   = f.text_field :pronouns
@@ -136,10 +136,11 @@ h3 Questionnaire
                 = hidden_field_tag "character[questionnaire_answers][][id]"
               = hidden_field_tag "character[questionnaire_answers][][questionnaire_item_id]", question.id
 
-= hidden_field_tag "submit", false
+
 
 = f.submit "Save"
-- if @character.status == 0
+- if @character.status == 0 and (current_user == @character.user or @character.user.nil?)
+  = hidden_field_tag "status", @character.status
   = f.submit "Save and Submit", id: 'save-submit'
 
 .overlay#advantages-overlay
