--- a/app/views/characters/show.slim
+++ b/app/views/characters/show.slim
@@ -5,6 +5,9 @@ h2
   strong Name
   = @character.name
 .form-row
+  strong Status
+  = @character.get_status
+.form-row
   strong Character Pronouns
   = @character.pronouns
 .form-row
