Add description field for true selves; add box for description to true self form

--- a/app/views/storytellers/true_selves/_form.slim
+++ b/app/views/storytellers/true_selves/_form.slim
@@ -1,6 +1,9 @@
 .form-row
   = f.label :name
   = f.text_field :name
+.form-row
+  = f.label :description
+  = f.text_area :description
 
 .form-row
   = f.submit "Save", class: 'button'
