Add components to print stylesheet

--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -1,6 +1,9 @@
 @import "base/*";
 @import "utilities/*";
 @import "pages/character";
+@import "font-awesome-sprockets";
+@import "font-awesome";
+@import "components/form";
 
 body {
   font-size: 16px;
