Add page breaks to print all

--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -10,3 +10,15 @@ body {
   line-height: 22px;
   font-family: 'Roboto', sans-serif;
 }
+
+.sheet {
+  page-break-after: always;
+
+  .stats {
+    page-break-after: always;
+  }
+
+  .qualitative {
+    page-break-before: always;
+  }
+}
