--- a/app/assets/stylesheets/utilities/_typography.scss
+++ b/app/assets/stylesheets/utilities/_typography.scss
@@ -19,10 +19,14 @@ h1 {
 
 h2 {
   font-size: 32px;
+  line-height: 40px;
+  margin: .5em 0 1em;
 }
 
 h3 {
   font-size: 24px;
+  line-height: 36px;
+  margin: .5em 0 0;
 }
 
 h4, h5, h6 {
