--- a/app/views/characters/print.slim
+++ b/app/views/characters/print.slim
@@ -2,24 +2,46 @@
   h2 #{@character.name}
 
   .stats
-    .form-row
-      strong Name
-      = @character.name
-    .form-row
-      strong Status
-      = @character.get_status
-    .form-row
-      strong Character Pronouns
-      = @character.pronouns
-    .form-row
-      strong Player
-      = @character.user.name
-    .form-row
-      strong True Self
-      - if @character.true_self
-        = @character.true_self.name
+    .flex-container.start
+      .column
+        .row
+          strong Name
+          = @character.name
+        .row
+          strong Status
+          = @character.get_status
+        .row
+          strong Character Pronouns
+          = @character.pronouns
+        .row
+          strong Player
+          = @character.user.name
+        .row
+          strong True Self
+          - if @character.true_self
+            = @character.true_self.name
+      .column
+        .row
+          strong Willpower
+          .boxes
+            - @character.willpower.times do
+              i.fa.fa-square-o
+        .row
+          strong Health
+          .boxes
+            - @character.health.times do
+              i.fa.fa-square-o
+        .row
+          strong Initiative
+          = @character.initiative
+        .row
+          strong Defense
+          = @character.defense
+        .row
+          strong Speed
+          = @character.speed
 
-    h3 Attributes
+    h3.attributes Attributes
 
     .flex-container
       - @attributes.each do |cat, vals|
@@ -40,7 +62,7 @@
               .numeric
                 = eval "@character.#{val.parameterize("_")}"
 
-    h3 Skills and Special Training
+    h3.skills-training Skills and Special Training
 
     .flex-container
       - @skills_training.each do |cat, vals|
@@ -61,53 +83,33 @@
               .numeric
                 = eval "@character.#{val.parameterize("_")}"
 
-    h3 Advantages
+    .flex-container
+      .column
+        h3 Advantages
 
-    ul#advantages
-      - @character.character_has_advantages.group_by{|adv| adv.advantage_id}.each do |k, group|
-        - group.each_with_index do |cha, i|
-          li
-            p.name
-              = cha.advantage.name
-              - if cha.advantage.requires_specification?
-                = " (#{cha.specification})"
-              - if cha.advantage.allowed_ratings.length > 1
-                = " #{cha.rating}"
-            - if i == group.length-1
+        ul#advantages
+          - @character.character_has_advantages.group_by{|adv| adv.advantage_id}.each do |k, group|
+            - group.each_with_index do |cha, i|
+              li
+                p.name
+                  = cha.advantage.name
+                  - if cha.advantage.requires_specification?
+                    = " (#{cha.specification})"
+                  - if cha.advantage.allowed_ratings.length > 1
+                    = " #{cha.rating}"
+                - if i == group.length-1
+                  p.desc
+                    = cha.advantage.description.html_safe
+      .column
+        h3 Challenges
+
+        ul#advantages
+          - @character.character_has_challenges.each do |chc|
+            li
+              p.name
+                = chc.challenge.name
               p.desc
-                = cha.advantage.description.html_safe
-
-    h3 Challenges
-
-    ul#advantages
-      - @character.character_has_challenges.each do |chc|
-        li
-          p.name
-            = chc.challenge.name
-          p.desc
-            = chc.challenge.description
-
-    h3 Derived Stats
-
-    p.willpower
-      strong Willpower:
-      = @character.willpower
-
-    p.health
-      strong Health:
-      = @character.health
-
-    p.initiative
-      strong Initiative:
-      = @character.initiative
-
-    p.defense
-      strong Defense:
-      = @character.defense
-
-    p.speed
-      strong Speed:
-      = @character.speed
+                = chc.challenge.description
 
   .qualitative
     h2 #{@character.name}: Questionnaire
