fix database migrations

--- a/app/views/characters/show.slim
+++ b/app/views/characters/show.slim
@@ -114,7 +114,7 @@ p.speed
   strong Speed:
   = @character.speed
 
-- if @character.is_npc
+- unless @character.is_npc
   h3 Questionnaire
 
   .questionnaire
