Finish styling navbar for mobile

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
         <% end %>
       </ul>
     </nav>
-    <button class="hamburger" type="button">
+    <button class="hamburger hamburger--collapse" type="button">
       <span class="hamburger-box">
         <span class="hamburger-inner"></span>
       </span>
