--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -2,6 +2,11 @@ header {
   background-color: $black;
   color: $white;
 
+  .header-interior {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
   h1 {
     @include text-glow;
@@ -111,7 +116,70 @@ header {
 }
 
 @media (max-width:$small-media-query-size) {
+  header {
+    nav {
+      display: none;
+      position: fixed;
+      top: 60px;
+      left: 0;
+      width: 100%;
+      height: calc(100% - 60px);
+      transform: translate(0, -5px);
+      transition: .5s;
+      background-color: $black;
+      margin: 0;
+      z-index: 999;
 
+      ul {
+        display: block;
+        border-top: 1px $silver solid;
+
+        > li {
+          margin: 0;
+          > a, > span {
+            height: auto;
+            line-height: 1.2;
+            display: block;
+            padding: 10px 20px;
+            border-bottom: 1px rgba($black, .2);
+
+            &:after {
+              bottom: 0;
+              left: 0;
+              right: 0;
+            }
+          }
+        }
+
+        li.parent {
+
+          ul.sub-menu {
+            position: static;
+            box-shadow: none;
+            border-bottom: 1px rgba($black, .25) solid;
+            transform: translate(0);
+            display: none;
+          }
+
+          &:hover {
+            ul.sub-menu {
+              display: block;
+              border-top: none;
+
+              li a {
+                padding: 10px 20px;
+              }
+            }
+          }
+        }
+      }
+
+      &.show {
+        transform: translate(0);
+        display: block;
+      }
+    }
+  }
 }
 
 @media (min-width:$small-media-query-size) {
