--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -13,6 +13,7 @@ header {
     font-variant-caps: small-caps;
     margin: 0;
     line-height: 1;
+    white-space: nowrap;
 
     a {
       color: $white;
@@ -117,6 +118,9 @@ header {
 
 @media (max-width:$small-media-query-size) {
   header {
+    h1 {
+      font-size: 28px;
+    }
     nav {
       display: none;
       position: fixed;
