--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -8,10 +8,17 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
+
+  > header {
+    width: 100%;
+  }
 
   > .main {
     flex: 1;
     display: flex;
     flex-direction: column;
+    width: 100%;
+    max-width: $max-page-width;
   }
 }
