Style base stats on character form.

--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -22,3 +22,11 @@ body {
     max-width: $max-page-width;
   }
 }
+
+
+@media (max-width:$large-media-query-size) {
+  .main {
+    padding: 0 12px;
+    box-sizing: border-box;
+  }
+}
