--- a/app/assets/stylesheets/utilities/_typography.scss
+++ b/app/assets/stylesheets/utilities/_typography.scss
@@ -20,7 +20,8 @@ h1 {
 h2 {
   font-size: 32px;
   line-height: 40px;
-  margin: .5em 0 1em;
+  margin: .5em 0;
+  border-bottom: 3px solid $green;
 }
 
 h3 {
