--- a/app/views/storytellers/challenges/edit.slim
+++ b/app/views/storytellers/challenges/edit.slim
@@ -1,6 +1,7 @@
-h2
-  = "Edit Challenge: #{@challenge.name}"
+.data-entry-form
+  h2
+    = "Edit Challenge: #{@challenge.name}"
 
-= form_for @challenge, url: {action: 'update'}, method: 'PATCH' do |f|
-  = f.hidden_field :id
-  = render partial: 'form', locals: {f: f}
+  = form_for @challenge, url: {action: 'update'}, method: 'PATCH' do |f|
+    = f.hidden_field :id
+    = render partial: 'form', locals: {f: f}
