--- a/app/views/storytellers/challenges/new.slim
+++ b/app/views/storytellers/challenges/new.slim
@@ -1,4 +1,5 @@
-h2 New Challenge
+.data-entry-form
+  h2 New Challenge
 
-= form_for @challenge, url: {action: 'create'} do |f|
-  = render partial: 'form', locals: {f: f}
+  = form_for @challenge, url: {action: 'create'} do |f|
+    = render partial: 'form', locals: {f: f}
