--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -116,6 +116,14 @@ header {
   }
 }
 
+@media (max-width: $medium-media-query-size) {
+  header {
+    h1 {
+      font-size: 32px;
+    }
+  }
+}
+
 @media (max-width:$small-media-query-size) {
   header {
     h1 {
