--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
-@import "reset.scss";
 @import "utilities/*";
+@import "base/reset.scss";
 @import "base/base.scss";
 @import "components/*";
 @import "pages/*";
