Style skills and special training. Reorganize scss because Rails hates us.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,5 @@
-@import "base/reset.scss";
+@import "base/*";
 @import "utilities/*";
-@import "base/base.scss";
 @import "components/*";
 @import "pages/*";
 
