Remove rich text editors, add styling for markdown notice, add redcarpet gem

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -14,6 +14,8 @@
   font-weight: bold;
   font-size: 16px;
   min-width: 100px;
+  width: auto;
+  text-align: center;
   transition: .5s;
 
   &:hover, &:focus {
