--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -25,6 +25,29 @@ textarea {
   }
 }
 
+textarea {
+  max-width: 100%;
+  width: 50em;
+  height: 150px;
+  box-sizing: border-box;
+  padding-bottom: 22px;
+}
+
+.textarea-wrapper {
+  width: 50em;
+  position: relative;
+
+  .notice {
+    position: absolute;
+    bottom: 1px;
+    right: 1px;
+    border-radius: 4px 0 4px 0;
+    background-color: rgba($silver, .5);
+    padding: 0 5px;
+    font-size: 12px;
+  }
+}
+
 select {
   padding: 10px;
   border-radius: 5px;
