--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -61,11 +61,11 @@
                     = f.radio_button val.parameterize("_").to_sym, i, label: false
 
   h3.section Advantages
-
-  select name="advantages" id="advantages"
-    - @advantages.each do |advantage|
-      option value="#{advantage.id}" data-allowed-ratings="#{advantage.allowed_ratings}" data-specification="#{advantage.requires_specification}" #{advantage.name} [#{advantage.allowed_ratings}]
-  = button_tag 'Add', type: 'button', class: 'button', id: "advantage-add"
+  .form-row
+    select name="advantages" id="advantages"
+      - @advantages.each do |advantage|
+        option value="#{advantage.id}" data-allowed-ratings="#{advantage.allowed_ratings}" data-specification="#{advantage.requires_specification}" #{advantage.name} [#{advantage.allowed_ratings}]
+    = button_tag 'Add', type: 'button', class: 'button', id: "advantage-add"
 
   ul#advantages-list
     - @character.character_has_advantages.each do |advantage|
@@ -83,11 +83,11 @@
         = link_to "<i class='fa fa-minus-circle'></i>".html_safe, "#", class: 'advantage-delete'
 
   h3.section Challenges
-
-  select name="challenges" id="challenges"
-    - @challenges.each do |challenge|
-      option value="#{challenge.id}" data-is-custom="#{challenge.is_custom}" #{challenge.name}
-  = button_tag 'Add', type: 'button', class: 'button', id: "challenge-add"
+  .form-row
+    select name="challenges" id="challenges"
+      - @challenges.each do |challenge|
+        option value="#{challenge.id}" data-is-custom="#{challenge.is_custom}" #{challenge.name}
+    = button_tag 'Add', type: 'button', class: 'button', id: "challenge-add"
 
   ul#challenges-list
     - @character.character_has_challenges.each do |challenge|
