--- a/app/views/storytellers/challenges/_form.slim
+++ b/app/views/storytellers/challenges/_form.slim
@@ -14,5 +14,5 @@
   = f.label :is_custom, "Is Custom Challenge?"
   = f.check_box :is_custom
 
-.form-row
+.button-row
   = f.submit "Save", class: 'button'
