--- a/app/views/storytellers/true_selves/edit.slim
+++ b/app/views/storytellers/true_selves/edit.slim
@@ -1,6 +1,7 @@
-h2
-  = "Edit True Self: #{@true_self.name}"
+.data-entry-form
+  h2
+    = "Edit True Self: #{@true_self.name}"
 
-= form_for @true_self, url: {action: 'update'}, method: 'PATCH' do |f|
-  = f.hidden_field :id
-  = render partial: 'form', locals: {f: f}
+  = form_for @true_self, url: {action: 'update'}, method: 'PATCH' do |f|
+    = f.hidden_field :id
+    = render partial: 'form', locals: {f: f}
