remove some stuff we don't need

--- a/app/views/storytellers/questionnaire_items/index.slim
+++ b/app/views/storytellers/questionnaire_items/index.slim
@@ -21,4 +21,4 @@ h2 Questionnaire
   = button_tag "Add Question", type: 'button', id: 'add', class: 'button'
   = button_tag "Save", type: 'submit', class: 'button'
 
-<%= javascript_include_tag 'questionnaire', 'data-turbolinks-track' => true %>
+= javascript_include_tag 'questionnaire', 'data-turbolinks-track' => true
