Add a little styling for questionnaire page which I'm gonna fix later

--- a/app/assets/stylesheets/pages/_data_entry.scss
+++ b/app/assets/stylesheets/pages/_data_entry.scss
@@ -22,3 +22,14 @@
     margin-left: 0px;
   }
 }
+
+.data-entry-questionnaire {
+  input[type="text"] {
+    width: 100%;
+    max-width: none;
+  }
+
+  label + input {
+    margin-left: 0;
+  }
+}
