--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -16,6 +16,7 @@ textarea {
   -webkit-box-shadow: none;
   font-size: 16px;
   display: block;
+  box-sizing: border-box;
 
   &:focus {
     outline: none;
