--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -31,7 +31,20 @@ header {
       > li {
         position: relative;
 
-        > a, > span {
+        > form button {
+          background-color: transparent;
+          font-size: 16px;
+          font-family: 'Roboto', sans-serif;
+          border: none;
+          padding: 0;
+          cursor: pointer;
+
+          &:focus {
+            outline: none;
+          }
+        }
+
+        > a, > span, > form button {
           text-decoration: none;
           color: $white;
           height: auto;
