adds a class if the page is generated by the devise controller and applies the background image/styling based on that

--- a/app/assets/stylesheets/pages/devise.scss
+++ b/app/assets/stylesheets/pages/devise.scss
@@ -1,7 +1,11 @@
-.devise-page {
-  flex: 1;
+.main.devise {
+  max-width: none;
   background-image: url('/assets/misty-woods.jpg');
   background-size: cover;
+}
+
+.devise-page {
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
