--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <%= render partial: 'layouts/header' %>
-  <div class="main">
+  <div class="main<%= devise_controller? ? ' devise' : '' %>">
     <%= yield %>
   </div>
   <%= javascript_include_tag 'footer', 'data-turbolinks-track' => true %>
